# fdars

./: .gitignore  404.html  CHANGELOG.html  CHANGELOG.md  Cargo.toml  DESCRIPTION  LICENSE-text.html  LICENSE-text.md  NAMESPACE  README.md  TODO.md  authors.html  authors.md  codecov.yml  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml  test_degras_manual.py
fdapy/: README.md  pyproject.toml
fdapy/python/fdapy/: clustering.py  detrend.py  metric.py  outliers.py  regression.py  seasonal.py  smoothing.py
fdapy/src/: basis.rs  clustering.rs  detrend.rs  metric.rs  outliers.rs  seasonal.rs
fdapy/tests/: test_fdata.py
fdars-core/: CHANGELOG.md  Cargo.toml  README.md
fdars-core/benches/: alignment_benchmarks.rs  basis_benchmarks.rs  classification_benchmarks.rs  depth_benchmarks.rs  explain_benchmarks.rs  matrix_benchmarks.rs  regression_benchmarks.rs  seasonal_benchmarks.rs  smoothing_benchmarks.rs
fdars-core/examples/01_simulation/: main.rs
fdars-core/examples/02_functional_operations/: main.rs
fdars-core/examples/03_smoothing/: main.rs
fdars-core/examples/04_basis_representation/: main.rs
fdars-core/examples/05_depth_measures/: main.rs
fdars-core/examples/06_distances_and_metrics/: main.rs
fdars-core/examples/07_clustering/: main.rs
fdars-core/examples/08_regression/: main.rs
fdars-core/examples/09_outlier_detection/: main.rs
fdars-core/examples/10_seasonal_analysis/: main.rs
fdars-core/examples/11_detrending/: main.rs
fdars-core/examples/12_streaming_depth/: main.rs
fdars-core/examples/13_irregular_data/: main.rs
fdars-core/examples/14_complete_pipeline/: main.rs
fdars-core/examples/15_tolerance_bands/: main.rs
fdars-core/examples/16_elastic_alignment/: main.rs
fdars-core/examples/17_equivalence_test/: main.rs
fdars-core/examples/18_landmark_registration/: main.rs
fdars-core/examples/19_tsrvf/: main.rs
fdars-core/examples/20_scalar_on_function/: main.rs
fdars-core/examples/21_function_on_scalar/: main.rs
fdars-core/examples/22_gmm_clustering/: main.rs
fdars-core/examples/23_classification/: main.rs
fdars-core/examples/24_mixed_effects/: main.rs
fdars-core/examples/25_explainability/: main.rs
fdars-core/examples/26_elastic_analysis/: main.rs
fdars-core/examples/27_spm/: main.rs
fdars-core/examples/28_berkeley_growth/: main.rs
fdars-core/src/: alignment.rs  andrews.rs  basis.rs  classification.rs  clustering.rs  conformal.rs  covariance.rs  cv.rs  depth.rs  detrend.rs  distance.rs  elastic.rs  elastic_changepoint.rs  elastic_explain.rs  elastic_fpca.rs  elastic_regression.rs  error.rs  explain.rs  explain_generic.rs  famm.rs  fdata.rs  fof_regression.rs  function_on_scalar.rs  function_on_scalar_2d.rs  gmm.rs  helpers.rs  irreg_fdata.rs  landmark.rs  lib.rs  linalg.rs  matrix.rs  metric.rs  outliers.rs  parallel.rs  prelude.rs  regression.rs  scalar_on_function.rs  seasonal.rs  seasonal.rs.bak  simulation.rs  (+9 more)
fdars-core/src/alignment/: bayesian.rs  closed.rs  clustering.rs  constrained.rs  diagnostics.rs  elastic_depth.rs  fpns.rs  generative.rs  geodesic.rs  karcher.rs  lambda_cv.rs  mod.rs  multires.rs  nd.rs  outlier.rs  pairwise.rs  partial_match.rs  persistence.rs  phase_boxplot.rs  quality.rs  robust_karcher.rs  set.rs  shape.rs  shape_ci.rs  srsf.rs  tests.rs  transfer.rs  tsrvf.rs  warp_stats.rs
fdars-core/src/basis/: auto_select.rs  bspline.rs  fourier.rs  fourier_fit.rs  helpers.rs  mod.rs  projection.rs  pspline.rs  tests.rs
fdars-core/src/classification/: cv.rs  dd.rs  fit.rs  kernel.rs  knn.rs  lda.rs  mod.rs  qda.rs  tests.rs
fdars-core/src/conformal/: classification.rs  cv.rs  elastic.rs  generic.rs  mod.rs  regression.rs  tests.rs
fdars-core/src/depth/: band.rs  fraiman_muniz.rs  mod.rs  modal.rs  random_projection.rs  random_tukey.rs  rpd.rs  spatial.rs  tests.rs
fdars-core/src/detrend/: auto.rs  decompose.rs  diff.rs  linear.rs  loess.rs  mod.rs  polynomial.rs  stl.rs  tests.rs
fdars-core/src/elastic_regression/: logistic.rs  mod.rs  pcr.rs  regression.rs  scalar_on_shape.rs  tests.rs
fdars-core/src/explain/: advanced.rs  ale_lime.rs  counterfactual.rs  diagnostics.rs  helpers.rs  importance.rs  mod.rs  pdp.rs  sensitivity.rs  shap.rs  tests.rs
fdars-core/src/explain_generic/: ale.rs  anchor.rs  counterfactual.rs  friedman.rs  importance.rs  lime.rs  mod.rs  pdp.rs  prototype.rs  saliency.rs  shap.rs  sobol.rs  stability.rs  tests.rs
fdars-core/src/gmm/: cluster.rs  covariance.rs  em.rs  init.rs  linalg.rs  mod.rs  tests.rs
fdars-core/src/irreg_fdata/: kernels.rs  mod.rs  smoothing.rs  tests.rs
fdars-core/src/metric/: basis_coef.rs  deriv.rs  dtw.rs  fourier.rs  hausdorff.rs  hshift.rs  kl.rs  lp.rs  mod.rs  pca.rs  soft_dtw.rs  tests.rs
fdars-core/src/scalar_on_function/: bootstrap.rs  cv.rs  fregre_lm.rs  logistic.rs  mod.rs  multi.rs  nonparametric.rs  pls.rs  robust.rs  tests.rs
fdars-core/src/seasonal/: autoperiod.rs  change.rs  hilbert.rs  lomb_scargle.rs  matrix_profile.rs  mod.rs  peak.rs  period.rs  sazed.rs  ssa.rs  strength.rs  tests.rs
fdars-core/src/spm/: amewma.rs  (+20 more)
fdars-core/tests/: integration_explain_advanced.rs  integration_explain_diagnostics.rs  integration_explain_pdp.rs  integration_explain_sensitivity.rs  integration_explain_shap.rs  validate_against_r.rs  validate_explain_deep.rs  validate_explain_final.rs  validate_explainability.rs  validate_explainability_v2.rs  validate_explainability_v2_deep.rs  validate_explainability_v3.rs  validate_explainability_v3_deep.rs  validate_explainability_v4.rs  validate_explainability_v4_deep.rs  validate_explainability_v5.rs  validate_new_modules.rs  validate_phase_bands.rs  validate_spm_math.rs
fdars-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
fdars-py/src/: basis.rs  clustering.rs  depth.rs  detrend.rs  fdata.rs  lib.rs  metric.rs  outliers.rs  regression.rs  seasonal.rs  smoothing.rs  utility.rs
fdars-py/tests/: conftest.py  test_basis.py  test_clustering.py  test_depth.py  test_metric.py  test_outliers.py  test_regression.py  test_smoothing.py
src/rust/: Cargo.toml
(+637 files in other folders)
