[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "fdapy"
version = "0.1.0"
description = "Functional Data Analysis in Python"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Simon Muller" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["functional-data", "statistics", "fda", "depth", "clustering"]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.5"]
all = ["fdapy[viz]", "pandas>=1.3", "scipy>=1.7"]
dev = ["pytest>=7.0", "pytest-cov", "mypy", "ruff"]
docs = ["sphinx>=5.0", "sphinx-rtd-theme", "numpydoc"]

[project.urls]
Homepage = "https://github.com/sipemu/fdapy"
Documentation = "https://fdapy.readthedocs.io"
Repository = "https://github.com/sipemu/fdapy"

[tool.maturin]
python-source = "python"
module-name = "fdapy._fdapy"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "UP", "B"]
