[package]
name = "fdars-core"
version = "0.1.0"
edition = "2021"
description = "Functional Data Analysis algorithms in Rust"
license = "MIT"
repository = "https://github.com/sipemu/fdars"
documentation = "https://docs.rs/fdars-core"
readme = "README.md"
keywords = ["functional-data", "statistics", "fda", "depth", "clustering"]
categories = ["science", "mathematics"]

[dependencies]
rayon = "1.10"
rand = "0.8"
rand_distr = "0.4"
rustfft = "6.2"
num-complex = "0.4"
nalgebra = "0.33"
anofox-regression = "0.4"
faer = "0.23"
