[package]
name = "fdars-core"
version = "0.2.0"
edition = "2021"
authors = ["Simon Muller"]
description = "Functional Data Analysis algorithms in Rust"
license = "MIT"
repository = "https://github.com/sipemu/fdars"
homepage = "https://github.com/sipemu/fdars"
documentation = "https://docs.rs/fdars-core"
readme = "README.md"
keywords = ["functional-data", "statistics", "fda", "depth", "clustering"]
categories = ["science", "mathematics"]
rust-version = "1.70"

# Empty workspace table prevents Cargo from searching for parent workspace
# This is needed for R CMD check which copies package to a temp directory
[workspace]

[dependencies]
rayon = "1.10"
rand = "0.8"
rand_distr = "0.4"
rustfft = "6.2"
num-complex = "0.4"
nalgebra = "0.33"
anofox-regression = "0.4"
faer = "0.23"
