[package]
name = "fdars"
version = "0.1.0"
edition = "2021"
description = "Functional Data Analysis R bindings"
license = "MIT"

[lib]
crate-type = ["staticlib"]

[dependencies]
extendr-api = "0.7"
fdars-core = { path = "../../../fdars-core" }
rayon = "1.10"
rand = "0.8"
rand_distr = "0.4"
rustfft = "6.2"
num-complex = "0.4"
nalgebra = "0.33"
anofox-regression = "0.4"
faer = "0.23"
