[package]
name = "fdars-core"
version = "0.3.0"
edition = "2021"
authors = ["Simon Muller"]
description = "Functional Data Analysis algorithms in Rust"
license = "MIT"
repository = "https://github.com/sipemu/fdars"
homepage = "https://github.com/sipemu/fdars"
documentation = "https://docs.rs/fdars-core"
readme = "README.md"
keywords = ["functional-data", "statistics", "fda", "depth", "clustering"]
categories = ["science", "mathematics"]
# CRAN Windows uses Rust 1.81.0, so we need compatible dependencies
rust-version = "1.81"

# Note: [workspace] removed - this is vendored inside the R package workspace

[features]
default = ["parallel", "linalg"]
parallel = ["rayon"]
# Linear algebra features (not WASM-compatible)
linalg = ["faer", "anofox-regression"]
# Enable JS features for WASM builds
js = ["getrandom/js"]

[dependencies]
rayon = { version = "1.10", optional = true }
rand = "0.8"
rand_distr = "0.4"
rustfft = "6.2"
num-complex = "0.4"
nalgebra = "0.33"
anofox-regression = { version = "0.4", optional = true }
# Pin to 0.20.x for Rust 1.81.0 compatibility (CRAN Windows)
# faer 0.21+ requires Rust 1.84.0
faer = { version = "=0.20.2", optional = true }
getrandom = { version = "0.2", optional = true }

# WASM target configuration
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "seasonal_benchmarks"
harness = false
